TestCases/LLVMTests/SyntaxErrorTests/tests/test36.c
int main(){
    return 0;
}

appel(){}; // Invalid function declaration

//appel();




int foo(){
    return 0;
}